# credit_risk_ml

./: .condaignore  .dockerignore  .gitignore  DATA_STATEMENT.md  DEVELOPMENT.md  Dockerfile  MLproject  Makefile  README.md  batch_chunk_monitor.py  build_docker.sh  build_package.bat  check_env.py  check_features.py  check_models.py  check_preprocessor.py  create_baseline.py  debug_model.py  do  docker-compose.yml  find_my_run.py  fix_structure.py  global_importances.json  init_project.py  local_explanations.json  metrics.json  migrate_experiment.py  mypy.ini  prepare_artifacts.sh  pyproject.toml  register_model.py  requirements.txt  shap_summary.json  shap_values.npy  stress_bias_report.html  test_package.py  update_imports.py  validate_and_register.py
C/projects/credit_risk_ml/: mlflow.db
experiments/exp_20260303_135753/: metrics.json
experiments/exp_20260303_142714/: config.json
experiments/exp_20260322_153037_optimized/: config.json  metrics.json
experiments/exp_20260322_155511_enhanced/: metrics.json
experiments/models/CreditRiskLogistic/: meta.yaml
grafana_data/: grafana.db
model_docs/: MODEL_CARD.md  metadata.json
models/: metadata_v1.json
notebooks/: 01_eda.py  credit_risk_v20.ipynb  eda.ipynb  mlflow.db  o1_report..ipynb  threshold.ipynb  threshold_0_2_v5.ipynb  what_if.ipynb
predictions/: predictions.csv
recipe/: meta.yaml
reports/: final_metrics.json  threshold_results.csv
ruta/a/: mlflow.db
scripts/: copy_mlflow_model.py  find_my_model.py  inspect_model.py  migrate_experiments_to_mlflow.py  promote_v3.py  register_model.py  set_active_model.py  simulate_traffic.py  test_model_service.py  test_ui_vs_api.py  train_and_log_model.py  train_optimized_v3.py
src/: inference.py  mlflow.db
src/credit_risk_analysis/: test_stress.py  train_runner.py
src/credit_risk_analysis/api/: drift_monitor.py  main.py  model_loader.py  monitor_view.py  schemas.py
src/credit_risk_analysis/config/: config_loader.py  schema.yaml
src/credit_risk_analysis/dashboard/: app.py  exceptions.py  monitor.py
src/credit_risk_analysis/features/: build_preprocessor.py  feature_engineering.py
src/credit_risk_analysis/governance/: registry.py  xai.py
src/data/: load_data.py  make_dummy_data.py  validation.py
tests/: check_path.py  stress_bias_testing.py  stress_test.py  test_api.py  test_load.py  test_metadata_validation.py  test_model_service.py  test_model_service_resilience.py  test_model_validation.py  test_pipeline.py  test_registry.py  verify_config.py  verify_deployment.py
(+27 files in other folders)
