[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "credit-risk-analysis"
version = "1.0.0"
description = "Modelo profesional de análisis de riesgo crediticio con MLflow y XAI"
readme = "README.md"
authors = [
    { name = "ML Engineer", email = "senior@ml.com" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "mlflow>=2.11.0",
    "cloudpickle>=3.0.0",
    "shap>=0.44.0",
    "matplotlib>=3.8.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "joblib>=1.3.0"
]

[project.scripts]
# Vinculación al entry point del pipeline de entrenamiento
credit-risk-train = "credit_risk_analysis.training.train_pipeline:run_professional_training"

# ==============================================================================
# SETUPTOOLS: Configuración de rutas para src/
# ==============================================================================
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["credit_risk_analysis*"] 

[tool.setuptools.package-data]
"*" = ["*.csv", "*.yaml", "*.html"]

# ==============================================================================
# MYPY: Verificación estricta de tipos
# ==============================================================================
[tool.mypy]
python_version = "3.12"
strict = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

exclude = [
    'mlruns',
    'models',
    '\.venv',
    'build',
    'dist',
    'artifacts'
]

# ==============================================================================
# BLACK & ISORT: Formateo y Estilo PEP 8
# ==============================================================================
[tool.black]
line-length = 79
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 79
force_single_line = false

# ==============================================================================
# PYTEST: Configuración de pruebas unitarias
# ==============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--strict-markers"

